change in about

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,12 +1,12 @@
-extends base.pug
+//- extends base.pug
 
-block scripts
-  script(src='/static/index.js.js')
+//- block scripts
+//-   script(src='/static/index.js.js')
 
-block style
-  style
-    include ../static/style.css
+//- block style
+//-   style
+//-     include ../static/style.css
 
-block content
-    h1 this is about page  of my Website
-    h2 changes done in about page
+//- block content
+//-     h1 this is about page  of my Website
+//-     h2 changes done in about page
